--- a/public/index.html
+++ b/public/index.html
@@ -1,32 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zadatak 7 | Nikola Lukic</title>
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Pomodoro app</title>
+    <!-- Stylesheet -->
+    <link rel="stylesheet" href="css/style.css">
+
+    <!-- JavaScript -->
+    <script src="js/script.js" defer></script>
 </head>
 <body>
-  pomodoro
-  short break
-  long break
+    <svg class="progress" width="100" height='100'>
+      <circle class="progress-circle" cx="50" cy="50" r="30" fill='transparent' stroke='blue' stroke-width='5'/>
+      <text class="loading" fill='blue' x='50' y='50' text-anchor='middle' alignment-baseline='middle'>Ok</text>
+    </svg>
 
-  start 
-  pause
-  restart
-
-  Settings
-
-  Time (minutes)
-  pomodoro
-  short break
-  long break
-
-  Font
-  Color
-
-  Apply
 </body>
 </html>
