--- a/public/index.html
+++ b/public/index.html
@@ -11,10 +11,23 @@
 
     <!-- JavaScript -->
     <script src="js/script.js" defer></script>
+
+
 </head>
 <body>
+
     <svg class="progress" width="100" height='100'>
-      <circle class="progress-circle" cx="50" cy="50" r="30" fill='transparent' stroke='blue' stroke-width='5'/>
+      <!-- <h1>e</h1> -->
+      <circle 
+        class="progress-circle" 
+        cx="50" 
+        cy="50" 
+        r="30" 
+        fill='transparent' 
+        stroke='blue' 
+        stroke-width='5' 
+        stroke-linecap='round'
+      />
       <text class="loading" fill='blue' x='50' y='50' text-anchor='middle' alignment-baseline='middle'>Ok</text>
     </svg>
 
