--- a/public/index.html
+++ b/public/index.html
@@ -16,19 +16,20 @@
 </head>
 <body>
 
-    <svg class="progress" width="100" height='100'>
+    <!-- <svg class="progress" min-x='0' min-y='0' width="300" height='300'> -->
+    <svg class="progress" width='200' height='200'>
       <!-- <h1>e</h1> -->
       <circle 
         class="progress-circle" 
-        cx="50" 
-        cy="50" 
-        r="30" 
+        cx="100" 
+        cy="100" 
+        r="47%" 
         fill='transparent' 
         stroke='blue' 
         stroke-width='5' 
         stroke-linecap='round'
       />
-      <text class="loading" fill='blue' x='50' y='50' text-anchor='middle' alignment-baseline='middle'>Ok</text>
+      <!-- <text class="loading" fill='blue' x='50' y='50' text-anchor='middle' alignment-baseline='middle'>Ok</text> -->
     </svg>
 
 </body>
