imported fonts, and created variables for them in the project root

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zadatak 7 | Nikola Lukic</title>
+    <style src='js/font-imports.js'></style>
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="css/style.css">
@@ -18,7 +19,7 @@
 
     <!-- <svg class="progress" min-x='0' min-y='0' width="300" height='300'> -->
     <svg class="progress" width='200' height='200'>
-      <!-- <h1>e</h1> -->
+
       <circle 
         class="progress-circle" 
         cx="100" 
@@ -31,6 +32,6 @@
       />
       <!-- <text class="loading" fill='blue' x='50' y='50' text-anchor='middle' alignment-baseline='middle'>Ok</text> -->
     </svg>
-
+<h1>Cao braco moja</h1>
 </body>
 </html>
