created initial setup for the modal box

--- a/public/index.html
+++ b/public/index.html
@@ -46,5 +46,37 @@
       </svg>
     </button>
   </div>
+
+
+  <div class="card">
+
+    <div class="border-bottom">
+      <div class="container">
+        <h3>Settings</h3>
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="border-bottom">
+        time settings
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="border-bottom">
+        font settings
+      </div>
+    </div>
+
+    <div class="container">
+      <div class="border-bottom">
+        color settings
+      </div>
+    </div>
+
+
+    <button class="apply-btn">Apply</button>
+  </div>
+  
   </body>
   </html>
