created styling for the radio input circles for theme and color selection

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   
   
 </head>
-<body>
+<body class="open-settings">
   
   <h1 class="heading">Pomodoro</h1>
   
@@ -67,9 +67,9 @@
         <div class="border-bottom padding-top-bottom font-container">
           <h4>Font</h4>
           <div class="circle-containers">
-            <buton class="circle-btn">button</buton>
-            <buton class="circle-btn">button</buton>
-            <buton class="circle-btn">button</buton>
+            <input type="radio" class="circle-radio" name="font" id="font1" checked>
+            <input type="radio" class="circle-radio" name="font" id="font2">
+            <input type="radio" class="circle-radio" name="font" id="font3">
           </div>
         </div>
       </div>
@@ -78,9 +78,9 @@
         <div class="colors-container">
           <h4>Color</h4>
           <div class="circle-containers">
-            <buton class="circle-btn">button</buton>
-            <buton class="circle-btn">button</buton>
-            <buton class="circle-btn">button</buton>
+            <input type="radio" class="circle-radio" name="theme" id="theme1" checked>
+            <input type="radio" class="circle-radio" name="theme" id="theme2">
+            <input type="radio" class="circle-radio" name="theme" id="theme3">
           </div>
         </div>
       </div>
