--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <style src='js/font-imports.js'></style>
   
   <!-- Stylesheet -->
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/main.css">
   
   <!-- JavaScript -->
   <script type="module" src="js/script.js" defer></script>
