--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Zadatak 7 | Nikola Lukic</title>
   <style src='js/font-imports.js'></style>
+  <link rel="shortcut icon" href="./assets/favicon-32x32.png" type="image/x-icon">
   
   <!-- Stylesheet -->
   <link rel="stylesheet" href="css/main.css">
